# MyNotes

./: .gitignore  GamesBuy.json  GamesBuyStock.json  YouYiCore.jsx  my  my.pub
SD/: DetailMAP_gaoQi.sbs
SJXShaderGraphTest/: New Material.mat  testADIAshader.shadergraph
SJXShaderGraphTest/DepthToonWater/: DepthFade.shadersubgraph  Movement.shadersubgraph  ToonWater.mat  testADIAshader.shadergraph
SJXShaderGraphTest/Liquid/: New Material.mat  New Shader Graph.shadergraph
ShaderGraphs/Effect/: eff_3color_inst.shadergraph  eff_basemap_lit.shadergraph  eff_basemap_lit_inst.shadergraph  eff_customdissolvedirection_lit_inst.shadergraph  eff_customdissolvemask_inst.shadergraph  eff_customdissolvemaskedge_inst.shadergraph  eff_customdistortion.shadergraph  eff_customuvscroll_inst.shadergraph  eff_cutout.shadergraph  eff_cutout_inst.shadergraph  eff_dissolvemask_inst.shadergraph  eff_distortion.shadergraph  eff_distortion_inst.shadergraph  eff_intersection.shadergraph  eff_lit.shadergraph  eff_lit_inst.shadergraph  eff_radialgradient.shadergraph  eff_unlit_inst.shadergraph  (+1 more)
b_笔记/: Ninth玩家.txt  buffer.glsl  ls.py  macCommandLine.txt  webSever.py  学习网站笔记.md  学习网站笔记.txt  笔记.txt
b_笔记/Lang/Cmake/example/: CMakeCache.txt  CMakeLists.txt  adder.cpp  main.cpp
b_笔记/Lang/Cmake/example/Adder/: CMakeLists.txt  adder.cpp  adder.h
logs/: 2021_05_09-09_26_57_PM_log.txt
pyMoneyOutSystem/: GamesBuy.json  GamesBuyStock.json  GamesBuyStock的副本.json  GamesSellStock.json  value.py
rebuildBat/: good.txt  拆分文件(在vscode里分行).bat
vba/: 往期模型分类.xlsm
项目清单/: ~$项目交接清单.docx  项目交接清单.docx
(+1174 files in other folders)
